# smart-sensing

./: README.md
organization-manager/java-orgserver-coap/: Californium3.properties
sensor-implementation/thingy53-bdi-coap-client/: .gitignore  CMakeLists.txt  Makefile  overlay-logging.conf  overlay-low-power.conf  overlay-mtd.conf  overlay-rtt.conf  overlay_thread_analyzer.conf  prj.conf  prj_minimal.conf  sample.yaml
sensor-implementation/thingy53-bdi-coap-client/boards/: thingy53_nrf5340_cpuapp.conf  thingy53_nrf5340_cpuapp.overlay  thingy53_nrf5340_cpuapp_ns.conf  thingy53_nrf5340_cpuapp_ns.overlay
sensor-implementation/thingy53-bdi-coap-client/boards/arm/thingy53/: Kconfig.board  Kconfig.defconfig  thingy53.dts  thingy53.yaml  thingy53_defconfig
sensor-implementation/thingy53-bdi-coap-client/embedded-bdi/data/: agentspeak.asl  functions.h
sensor-implementation/thingy53-bdi-coap-client/embedded-bdi/src/config/: configuration.h
sensor-implementation/thingy53-bdi-coap-client/interface/: coap_server_client_interface.h
sensor-implementation/thingy53-bdi-coap-client/src/: main.cpp  main.h  thingy53-bdi-coap-client.code-workspace
sensor-implementation/thingy53-bdi-coap-client/src/coap/: CoapClient.cpp  CoapClient.h
sensor-implementation/thingy53-bdi-coap-client/src/mas-abstractions/agent/: ReactiveAgent.cpp  ReactiveAgent.h
sensor-implementation/thingy53-bdi-coap-client/src/mas-abstractions/organization/: GossipMonger.c  GossipMonger.h  GroupRole.h  Organization.cpp  Organization.h
sensor-implementation/thingy53-bdi-coap-client/src/peripherals/: BME688.cpp  BME688.h  battery.c  battery.h  gpio.c  gpio.h  sensors.c  sensors.h
sensor-implementation/thingy53-bdi-coap-client/src/thread/: thread_helper.c  thread_helper.h
(+20 files in other folders)
